Updated kafka and dynamo versions